# DGT

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.yml  railway.json
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  config.py  geospatial.py  main.py  models.py  parser.py  pyproject.toml  railway.toml  requirements.txt  vulnerability.py  worker.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  railway.toml  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BeaconMap.tsx  InfoPage.tsx  PeligroPage.tsx  StatsPage.css  StatsPage.tsx  StatsPanel.css  StatsPanel.tsx
frontend/src/components/BeaconMap/: BeaconMap.tsx
frontend/src/components/StatsPanel/: StatsPanel.tsx
frontend/src/hooks/: index.ts  useBeacons.ts  useGeolocation.ts
frontend/src/pages/InfoPage/: InfoPage.css
frontend/src/pages/StatsPage/: StatsPage.tsx
frontend/src/types/: beacon.ts
nginx/: Dockerfile  nginx.conf
propuestas/: DGT_pagina.md  PRIORIDADES.md  ROADMAP.md  analisis_enriquecimiento_dgt.md  linkedin.md  twitter.md
