[project]
name = "dgt-v16-backend"
version = "1.0.0"
description = "DGT V16 Live Map Backend - Real-time traffic incident visualization"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "sqlalchemy[asyncio]>=2.0.25",
    "geoalchemy2>=0.14.3",
    "psycopg2-binary>=2.9.9",
    "apscheduler>=3.10.4",
    "lxml>=5.1.0",
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
    "shapely>=2.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
